some comments and tags

--- a/site/index.html
+++ b/site/index.html
@@ -1,10 +1,18 @@
+<!--  -->
 <!DOCTYPE html>
 <html>
+    <!-- Descripciones, encoders, metadata sobre el main content -->
     <head>
+        <!-- sin closing del tag -->
+        <meta charset="utf-8">
+        <!-- sin esto, el html es invalido  -->
         <title>Hello World!</title>
     </head>
+    <!-- root de todo el contenido visible para el user -->
     <body>
         <h1>Hola gerson</h1>
+        Tengo muchas ganas de comer chocolate
         <p onclick ="alert('hi')">a</p>
+        <!-- Es trés importante cerrar tags antes de cerrar el parent -->
     </body>
 </html>
