Todas las pags linkeadas

--- a/site/lectures/div-and-span.html
+++ b/site/lectures/div-and-span.html
@@ -17,5 +17,6 @@
             Continue content of div 3 ***
         </div>
         <!-- El contrario no seria posible, un div no puede entrar en un span -->
+    <div><a href="../index.html" title="Back">click me!</a></div>
     </body>
 </html>
