--- a/site/lectures/heading-elm.html
+++ b/site/lectures/heading-elm.html
@@ -11,5 +11,6 @@
         <h4>Subheading 4</h4>
         <h5>Subheading 5</h5>
         <h6>Subheading 6</h6>
+        <div><a href="../index.html" title="Back">click me!</a></div>
     </body>
 </html>
