--- a/site/index.html
+++ b/site/index.html
@@ -14,5 +14,16 @@
         Tengo muchas ganas de comer chocolate
         <p onclick ="alert('hi')">a</p>
         <!-- Es trés importante cerrar tags antes de cerrar el parent -->
+        Links a páginas ejemplo: 
+
+        <ol>
+            <li><a href="lectures/div-and-span.html" title="div-and-span">Div and span</a></li>
+            <li><a href="lectures/esp-chars.html" title="esp-chars">Especial characteres</a></li>
+            <li><a href="lectures/heading-elm.html" title="heading-elm">Heading elements</a></li>
+            <li><a href="lectures/links.html" title="links">Links</a></li>
+            <li><a href="lectures/ordered-lists.html" title ="ordered-lists">Ordered lists</a></li>
+            <li><a href="lectures/semantic-elm.html" title ="semantic-elm">Semantic elements</a></li>
+            <li><a href="lectures/unordered-lists.html" title ="unordered-lists">Unordered lists</a></li>
+        </ol>
     </body>
 </html>
