--- a/site/index.html
+++ b/site/index.html
@@ -24,6 +24,7 @@
             <li><a href="lectures/ordered-lists.html" title ="ordered-lists">Ordered lists</a></li>
             <li><a href="lectures/semantic-elm.html" title ="semantic-elm">Semantic elements</a></li>
             <li><a href="lectures/unordered-lists.html" title ="unordered-lists">Unordered lists</a></li>
+            <li><a href="lectures/images.html" title="Images">Images</a></li>
         </ol>
     </body>
 </html>
