--- a/site/index.html
+++ b/site/index.html
@@ -26,5 +26,12 @@
             <li><a href="lectures/unordered-lists.html" title ="unordered-lists">Unordered lists</a></li>
             <li><a href="lectures/images.html" title="Images">Images</a></li>
         </ol>
+
+        <h2>CSS</h2>
+
+        Ejemplos:
+        <ol>
+            <li><a href="lectures/css/css-syntax.html" title="simplest css">CSS ejemplo simple</a></li>
+        </ol>
     </body>
 </html>
