css selecting elements

--- a/site/index.html
+++ b/site/index.html
@@ -32,6 +32,8 @@
         Ejemplos:
         <ol>
             <li><a href="lectures/css/css-syntax.html" title="simplest css">CSS ejemplo simple</a></li>
+            <li><a href="lectures/css/css-combining-sel.html" title="comb sel css">CSS combined class selection</a></li>
+            <li><a href="lectures/css/css-pseudo-sel.html" title="cps sel css">CSS pseudo class selection</a></li>
         </ol>
     </body>
 </html>
