--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <li><a href="lectures/semantic-elm.html" title ="semantic-elm">Semantic elements</a></li>
             <li><a href="lectures/unordered-lists.html" title ="unordered-lists">Unordered lists</a></li>
             <li><a href="lectures/images.html" title="Images">Images</a></li>
+            <li><a href="gerson.html" title="Images">Gerson</a></li>
         </ol>
 
         <h2>CSS</h2>
