--- a/gerson.html
+++ b/gerson.html
@@ -7,10 +7,10 @@
 </head>
 
 <body>
-    <h1>Don't be afraid to be &lt;than a 100% success:</h1>
+    <h1>Bueno che</h1>
     <p>
         <!-- An img tag is an inline element, tremendo -->
-        <img src="/lectures/megamind.jpg" width="1200" alt="Picture with a quote"> 
+        <img src="/lectures/megamind.jpg" width="1200" height="800" alt="Picture with a quote"> 
 </body>
 
 </html>
