--- a/gerson.html
+++ b/gerson.html
@@ -10,7 +10,7 @@
     <h1>Bueno che</h1>
     <p>
         <!-- An img tag is an inline element, tremendo -->
-        <img src="/lectures/megamind.jpg" width="1200" height="800" alt="Picture with a quote"> 
+        <img src="https://th.bing.com/th/id/OIP.fxBJcpQtjWTIdoaDie_42gHaDJ?w=304&h=148&c=7&r=0&o=5&pid=1.7" width="1200" height="800" alt="Picture with a quote"> 
 </body>
 
 </html>
