CSS styles placement, external sheets

--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
             <li><a href="lectures/semantic-elm.html" title ="semantic-elm">Semantic elements</a></li>
             <li><a href="lectures/unordered-lists.html" title ="unordered-lists">Unordered lists</a></li>
             <li><a href="lectures/images.html" title="Images">Images</a></li>
-            <li><a href="gerson.html" title="Images">Gerson</a></li>
         </ol>
 
         <h2>CSS</h2>
@@ -35,6 +34,7 @@
             <li><a href="lectures/css/css-syntax.html" title="simplest css">CSS ejemplo simple</a></li>
             <li><a href="lectures/css/css-combining-sel.html" title="comb sel css">CSS combined class selection</a></li>
             <li><a href="lectures/css/css-pseudo-sel.html" title="cps sel css">CSS pseudo class selection</a></li>
+            <li><a href="lectures/css/css-sty-pcmt.html" title ="css  style pcmt">CSS Style Placement</a></li>
         </ol>
     </body>
 </html>
