--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
             <li><a href="lectures/css/css-combining-sel.html" title="comb sel css">CSS combined class selection</a></li>
             <li><a href="lectures/css/css-pseudo-sel.html" title="cps sel css">CSS pseudo class selection</a></li>
             <li><a href="lectures/css/css-sty-pcmt.html" title ="css  style pcmt">CSS Style Placement</a></li>
+            <li><a href="lectures/css/conflict-resolution/origin.html">CSS origin and merge conflict resolution</a></li>
+            <li><a href="lectures/css/conflict-resolution/inheritance.html">CSS inheritance conflict resolution</a></li>
+            <li><a href="lectures/css/conflict-resolution/specificity.html">CSS specificity conflict resolution</a></li>
         </ol>
     </body>
 </html>
