Acomode html  files

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
         Links a páginas ejemplo: 
 
         <ol>
-            <li><a href="lectures/div-and-span.html" title="div-and-span">Div and span</a></li>
-            <li><a href="lectures/esp-chars.html" title="esp-chars">Especial characteres</a></li>
-            <li><a href="lectures/heading-elm.html" title="heading-elm">Heading elements</a></li>
-            <li><a href="lectures/links.html" title="links">Links</a></li>
-            <li><a href="lectures/ordered-lists.html" title ="ordered-lists">Ordered lists</a></li>
-            <li><a href="lectures/semantic-elm.html" title ="semantic-elm">Semantic elements</a></li>
-            <li><a href="lectures/unordered-lists.html" title ="unordered-lists">Unordered lists</a></li>
-            <li><a href="lectures/images.html" title="Images">Images</a></li>
+            <li><a href="lectures/html/div-and-span.html" title="div-and-span">Div and span</a></li>
+            <li><a href="lectures/html/esp-chars.html" title="esp-chars">Especial characteres</a></li>
+            <li><a href="lectures/html/heading-elm.html" title="heading-elm">Heading elements</a></li>
+            <li><a href="lectures/html/links.html" title="links">Links</a></li>
+            <li><a href="lectures/html/ordered-lists.html" title ="ordered-lists">Ordered lists</a></li>
+            <li><a href="lectures/html/semantic-elm.html" title ="semantic-elm">Semantic elements</a></li>
+            <li><a href="lectures/html/unordered-lists.html" title ="unordered-lists">Unordered lists</a></li>
+            <li><a href="lectures/html/images.html" title="Images">Images</a></li>
         </ol>
 
         <h2>CSS</h2>
