--- a/lectures/html/images.html
+++ b/lectures/html/images.html
@@ -24,7 +24,7 @@
         <img src="https://i.imgur.com/Ob7tuZ7.png" width="640" height="480">
     </p>
     <p>Theodore Roosevelt 1910 &copy; Copyright</p>
-    <div><a href="../index.html" title="Back">click me!</a></div>
+    <div><a href="../../index.html" title="Back">click me!</a></div>
 </body>
 
 </html>
