--- a/lectures/html/links.html
+++ b/lectures/html/links.html
@@ -67,6 +67,6 @@
         Back to top: <a href="#top">Back to Top</a>
         </p>
   </div>
-  <div><a href="../index.html" title="Back">click me!</a></div>
+  <div><a href="../../index.html" title="Back">click me!</a></div>
     </body>
 </html>
