--- a/lectures/html/template.html
+++ b/lectures/html/template.html
@@ -6,6 +6,6 @@
     </head>
     <body>
         <h1>Linked File</h1>
-        <div><a href="../index.html" title="Back">click me!</a></div>
+        <div><a href="../../index.html" title="Back">click me!</a></div>
     </body>
 </html>
