--- a/lectures/html/unordered-lists.html
+++ b/lectures/html/unordered-lists.html
@@ -26,6 +26,6 @@
 
             
         </div>
-        <div><a href="../index.html" title="Back">click me!</a></div>
+        <div><a href="../../index.html" title="Back">click me!</a></div>
     </body>
 </html>
