--- a/lectures/html/ordered-lists.html
+++ b/lectures/html/ordered-lists.html
@@ -25,6 +25,6 @@
 
 
         </div>
-        <div><a href="../index.html" title="Back">click me!</a></div>
+        <div><a href="../../index.html" title="Back">click me!</a></div>
     </body>
 </html>
