--- a/lectures/html/semantic-elm.html
+++ b/lectures/html/semantic-elm.html
@@ -29,7 +29,7 @@
 
         <footer>
             H Copyright 2023
-            <div><a href="../index.html" title="Back">click me!</a></div>
+            <div><a href="../../index.html" title="Back">click me!</a></div>
         </footer>
     </body>
 </html>
