--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
             <li><a href="lectures/css/conflict-resolution/origin.html">CSS origin and merge conflict resolution</a></li>
             <li><a href="lectures/css/conflict-resolution/inheritance.html">CSS inheritance conflict resolution</a></li>
             <li><a href="lectures/css/conflict-resolution/specificity.html">CSS specificity conflict resolution</a></li>
+            <li><a href="lectures/css/styling-text/styling-text-before.html">Styling text</a></li>
+            <li><a href="lectures/css/styling-text/font-size-before.html">Font size</a></li>
         </ol>
     </body>
 </html>
