--- a/lectures/css/styling-text/styling-text-before.html
+++ b/lectures/css/styling-text/styling-text-before.html
@@ -1,16 +1,31 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="utf-8">
-<title>Styling Text</title>
-<style>
-.style {
 
-}
-</style>
+<head>
+    <meta charset="utf-8">
+    <title>Styling Text</title>
+    <style>
+        .style {
+            font-family: Arial, Helvetica, sans-serif;
+            color: #0000ff;
+            font-style: italic;
+            font-weight: bold;
+            font-size: 24px; 
+            text-transform: capitalize;
+            /* A nivel bloque: */
+            text-align: center;
+        }
+    </style>
 </head>
+
 <body>
-<p>You can get commonly used font combinations from <a href="http://www.w3schools.com/cssref/css_websafe_fonts.asp">http://www.w3schools.com/cssref/css_websafe_fonts.asp</a>. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam quod necessitatibus a ullam dolorum amet reprehenderit sit laudantium reiciendis aperiam. </p>
-<p class="style">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam fugiat repudiandae fugit porro commodi.</p>
+    <p>You can get commonly used font combinations from <a
+            href="http://www.w3schools.com/cssref/css_websafe_fonts.asp">http://www.w3schools.com/cssref/css_websafe_fonts.asp</a>.
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam quod necessitatibus a ullam dolorum amet
+        reprehenderit sit laudantium reiciendis aperiam. </p>
+    <p class="style">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam fugiat repudiandae fugit porro
+        commodi.</p>
+    <div id="name"><a href="../../../index.html" title="Back">click me!</a></div>
 </body>
+
 </html>
