--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             <li><a href="lectures/css/conflict-resolution/specificity.html">CSS specificity conflict resolution</a></li>
             <li><a href="lectures/css/styling-text/styling-text-before.html">Styling text</a></li>
             <li><a href="lectures/css/styling-text/font-size-before.html">Font size</a></li>
+            <li><a href="lectures/css/box-model-before.html">Box Model</a></li>
         </ol>
     </body>
 </html>
