--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             <li><a href="lectures/css/styling-text/styling-text-before.html">Styling text</a></li>
             <li><a href="lectures/css/styling-text/font-size-before.html">Font size</a></li>
             <li><a href="lectures/css/box-model-before.html">Box Model</a></li>
+            <li><a href="lectures/css/background-before.html">Background properties</a></li>
         </ol>
     </body>
 </html>
