Positioning and 2 col

--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
             <li><a href="lectures/css/styling-text/font-size-before.html">Font size</a></li>
             <li><a href="lectures/css/box-model-before.html">Box Model</a></li>
             <li><a href="lectures/css/background-before.html">Background properties</a></li>
+            <li><a href="lectures/css/pos-by-floating/floating-before.html">Floating images</a></li>
+            <li><a href="lectures/css/pos-by-floating/two-column-before.html">Two columns model</a></li>
         </ol>
     </body>
 </html>
