--- a/lectures/css/pos-by-floating/floating-before.html
+++ b/lectures/css/pos-by-floating/floating-before.html
@@ -1,45 +1,59 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta charset="utf-8">
-<title>Floating Elements</title>
-<style>
+  <meta charset="utf-8">
+  <title>Floating Elements</title>
+  <style>
+    div {
+      background-color: #00FFFF;
+    }
 
-div {
-  background-color: #00FFFF;
-}
-p {
-  width: 50px;
-  height: 50px;
-  border: 1px solid black;
-}
+    p {
+      width: 50px;
+      height: 50px;
+      border: 1px solid black;
+    }
 
-#p1 {
-  background-color: #A52A2A;
-}
-#p2 {
-  background-color: #DEB887;
-}
-#p3 {
-  background-color: #5F9EA0;
-}
-#p4 {
-  background-color: #FF7F50;
-}
+    #p1 {
+      background-color: #A52A2A;
+      /* Con floating los margins don't collapse */
+      float: left;
+      height: 150px;
+    }
 
-</style>
+    #p2 {
+      background-color: #DEB887;
+      float: right;
+      height : 100px;
+    }
+
+    #p3 {
+      background-color: #5F9EA0;
+      clear: both;
+    }
+
+    #p4 {
+      background-color: #FF7F50;
+    }
+    section {
+      clear: left;
+    }
+  </style>
 </head>
+
 <body>
-<h1>Floating Elements</h1>
+  <h1>Floating Elements</h1>
 
-<div>
-  <p id="p1"></p>
-  <p id="p2"></p>
-  <p id="p3"></p>
-  <p id="p4"></p>
-  <section>This is regular content continuing after the the paragraph boxes.</section>
-</div>
+  <div>
+    <p id="p1"></p>
+    <p id="p2"></p>
+    <p id="p3"></p>
+    <p id="p4"></p>
+    <section>This is regular content continuing after the the paragraph boxes.</section>
+  </div>
 
-
+  <div id="name"><a href="../../../index.html" title="Back">click me!</a></div>
 </body>
+
 </html>
