Abs and rel positioning

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         Tengo muchas ganas de comer chocolate
         <p onclick ="alert('hi')">a</p>
         <!-- Es trés importante cerrar tags antes de cerrar el parent -->
+        <h2>HTML</h2>
         Links a páginas ejemplo: 
 
         <ol>
@@ -44,6 +45,7 @@
             <li><a href="lectures/css/background-before.html">Background properties</a></li>
             <li><a href="lectures/css/pos-by-floating/floating-before.html">Floating images</a></li>
             <li><a href="lectures/css/pos-by-floating/two-column-before.html">Two columns model</a></li>
+            <li><a href="lectures/css/positioning-before.html">Positioning</a></li>
         </ol>
     </body>
 </html>
