--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
             <li><a href="lectures/css/pos-by-floating/floating-before.html">Floating images</a></li>
             <li><a href="lectures/css/pos-by-floating/two-column-before.html">Two columns model</a></li>
             <li><a href="lectures/css/positioning-before.html">Positioning</a></li>
+            <li><a href="lectures/css/media-queries-before.html">Media queries</a></li>
+            <li><a href="lectures/css/responsive-before.html">Responsive design</a></li>
         </ol>
     </body>
 </html>
