De todo bootsrap

--- a/index.html
+++ b/index.html
@@ -49,5 +49,8 @@
             <li><a href="lectures/css/media-queries-before.html">Media queries</a></li>
             <li><a href="lectures/css/responsive-before.html">Responsive design</a></li>
         </ol>
+
+        <h3>Bootsrap 3</h3>
+        <a href="lectures/css/bootstrap3/index.html" title="Main Bootsrap 3 page">Main</a>
     </body>
 </html>
