--- a/index.html
+++ b/index.html
@@ -52,5 +52,8 @@
 
         <h3>Bootsrap 3</h3>
         <a href="lectures/css/bootstrap3/index.html" title="Main Bootsrap 3 page">Main</a>
+        <ol>
+            <li><a href="lectures/css/bootstrap3/grid-before.html" title="ex grid bootstrap3">Bootstrap example grid</a></li>
+        </ol>
     </body>
 </html>
