un poquito de pag

--- a/index.html
+++ b/index.html
@@ -55,5 +55,7 @@
         <ol>
             <li><a href="lectures/css/bootstrap3/grid-before.html" title="ex grid bootstrap3">Bootstrap example grid</a></li>
         </ol>
+        <h2>Página super chetada</h2>
+        <a href="lectures/pag/index.html">Clickeame puto</a>
     </body>
 </html>
