--- a/lectures/pag/index.html
+++ b/lectures/pag/index.html
@@ -56,6 +56,7 @@
         </div>
 
         <div id="collapsable-nav" class="collapse navbar-collapse">
+          <!-- nav navbar-nav es como dice la documentacion q va, navbar right es el flush -->
           <ul id="nav-list" class="nav navbar-nav navbar-right">
            <li>
              <a href="menu-categories.html">
