--- a/lectures/pag/index.html
+++ b/lectures/pag/index.html
@@ -102,7 +102,11 @@
         <a href="single-category.html"><div id="specials-tile"><span>specials</span></div></a>
       </div>
       <div class="col-md-4 col-sm-12 col-xs-12">
-        
+        <a href="" target="_blank">
+          <div id="map-tile">
+            <span>map</span>
+          </div>
+        </a>
       </div>
     </div>
 
