--- a/lectures/pag/index.html
+++ b/lectures/pag/index.html
@@ -102,8 +102,9 @@
         <a href="single-category.html"><div id="specials-tile"><span>specials</span></div></a>
       </div>
       <div class="col-md-4 col-sm-12 col-xs-12">
-        <a href="" target="_blank">
+        <a href="https://maps.app.goo.gl/y7Xv5jRtByYHAze29" target="_blank">
           <div id="map-tile">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3084.6752467530687!2d-76.71426302344939!3d39.363590271628304!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c81a14e7817803%3A0xab20a0e99daa17ea!2sDavid%20Chu&#39;s%20China%20Bistro!5e0!3m2!1ses!2sar!4v1696307061968!5m2!1ses!2sar" width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             <span>map</span>
           </div>
         </a>
