--- a/lectures/pag/menu-categories.html
+++ b/lectures/pag/menu-categories.html
@@ -58,7 +58,7 @@
         <div id="collapsable-nav" class="collapse navbar-collapse">
           <!-- nav navbar-nav es como dice la documentacion q va, navbar right es el flush -->
           <ul id="nav-list" class="nav navbar-nav navbar-right">
-           <li>
+           <li class="active">
              <a href="menu-categories.html">
                <span class="glyphicon glyphicon-cutlery"></span><br class="hidden-xs"> Menu</a>
            </li>
